refactoring users and presents controllers and views

--- a/app/views/presents/new.html.erb
+++ b/app/views/presents/new.html.erb
@@ -1,10 +1,15 @@
 <%= form_for :presents do |f| %>
     <%= f.label :name %><br>
     <%= f.text_field :name %><br>
+<br>
      <%= f.label "Cost" %><br>
     <%= f.text_field :cost %><br>
+<br>
     <%= f.label "Category" %><br>
     <%= f.text_field :category %><br>
+<br>
      <%= f.label "Brand" %><br>
+     <%= f.text_field :brand %><br>
+<br>
     <%= f.submit "Create Present" %><br>
 <% end %>
