--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
 
-Name:<%= @user.name %>
-Recipient<%= @recipient.name %>
-Present<%= @user.happiness %>
-<%= link_to "Log Out", signout_path %>
+#here I want to show the current user and the recipeints that they have bought gifts for 
+#while also displaying the presents for each recipient with their attributes
