--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :recipient do |f| %>
+<%= form_for @recipient do |f| %>
     <%= f.label :name %><br>
     <%= f.text_field :name %><br>
 <br>
