--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Signup</h1>
 <%= form_for :user do |f| %>
+<%= f.hidden_field :user_id, value: @user.id %>
 <p>
 <fieldset>
     <%= f.label :name %><br>
