--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <div>
+  <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete%>
+    <%end%>
   <div>
 
   <body>
