--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <div>
   <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete%>
+    <%= link_to "New Present", new_present_path %>
     <%end%>
   <div>
 
