added nested recipient name to present show page

--- a/app/views/presents/show.html.erb
+++ b/app/views/presents/show.html.erb
@@ -3,3 +3,5 @@
     Cost: <%= @present.cost%><br>
     Category: <%= @present.category%><br>
     Brand: <%= @present.brand%><br>
+    Recipient Name: <%= @present.recipient.name%><br>
+
