added recipient email to presents show page

--- a/app/views/presents/show.html.erb
+++ b/app/views/presents/show.html.erb
@@ -4,4 +4,5 @@
     Category: <%= @present.category%><br>
     Brand: <%= @present.brand%><br>
     Recipient Name: <%= @present.recipient.name%><br>
+    Recipient Email: <%= @present.recipient.email%><br>
 
