--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Signup</h1>
-<%= form_for :user do |f| %>
-<%= f.hidden_field :user_id, value: @user.id %>
+<%= render partial: '/layouts/errors', locals: {object: @user} %>
+
+<%= form_for @user do |f| %>
 <p>
 <fieldset>
     <%= f.label :name %><br>
