--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <div>
+   <%= button_to "Log in with Google", '/auth/google_oauth2'%>
   <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete%>
     <%= link_to "New Present", new_user_present_path(current_user) %>
