--- a/app/views/presents/new.html.erb
+++ b/app/views/presents/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a Present</h1>
 <%= render partial: '/layouts/errors', locals: {object: @present}%>
-
+<%= flash[:message]%>
 <%= form_for @present do |f| %>
 <p>
 <div>
