--- a/app/views/presents/index.html.erb
+++ b/app/views/presents/index.html.erb
@@ -1,4 +1,5 @@
 <h1><%= "Welcome, #{current_user.name}" %></h1>
+<%= flash[:message]%>
 <br>
 <h3> Here are the recipients you have bought presents for:</h3>
 <% @recipients.each do |recipient|%>
