modified link name for recipients path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete%> |
     <%= link_to "New Present", new_user_present_path(current_user) %> |
-    <%= link_to "Address Book", recipients_path %> |
+    <%= link_to "Nice List", recipients_path %> |
     <%= link_to "Home", user_presents_path(current_user) %>
   <% else %>
     <%= button_to "Log in with Google", '/auth/google_oauth2'%>
